Dark mode done, fixed a few bugs as well

--- a/src/main/resources/Styles.css
+++ b/src/main/resources/Styles.css
@@ -1,17 +1,71 @@
+* {
+    -background-color: #1b1b1b;
+    -border-color: #333333;
+    -text-color: #a6a6a6;
+    -control-background-color: #151515;
+    -button-color: #323232;
+}
+
 .vbox {
-    -fx-background-color: #1f2225;
-}
-
-.button {
-    -fx-background-color: #434343;
-    -fx-text-fill: #a6a6a6;
-}
-
-.text-field, .combo-box, .list-view {
-    -fx-background-color: #111314;
-    -fx-text-fill: #a6a6a6;
+    -fx-background-color: -background-color;
 }
 
 .label {
-    -fx-text-fill: #a6a6a6;
+    -fx-text-fill: -text-color;
+}
+
+.button {
+    -fx-background-color: -button-color;
+    -fx-text-fill: -text-color;
+}
+
+.text-field, .combo-box {
+    -fx-background-color: -control-background-color;
+    -fx-border-color: -border-color;
+    -fx-text-fill: -text-color;
+}
+
+.combo-box-popup .list-view {
+    -fx-background-color: -control-background-color, -control-background-color;
+}
+
+/*.combo-box .list-cell:filled:selected:focused, .combo-box .list-cell:filled:selected {*/
+/*    -fx-background-color: -control-background-color;*/
+/*}*/
+
+.list-view {
+    -fx-background-color: -control-background-color;
+    -fx-border-color: -border-color;
+}
+
+.list-cell, .combo-box .list-cell {
+    -fx-background-color: -control-background-color;
+    -fx-text-fill: -text-color;
+}
+
+.list-cell:filled:hover, .combo-box .list-cell:filled:hover {
+    -fx-background-color: #121212;
+    -fx-text-fill: -text-color;
+}
+
+.list-cell:selected:focused {
+    -fx-background-color: #0f0f0f;
+    -fx-text-fill: -text-color;
+}
+
+.check-box .box {
+    -fx-background-color: -control-background-color;
+    -fx-border-color: -border-color;
+}
+
+.check-box:selected .box .mark {
+    -fx-background-color: -text-color;
+}
+
+.scroll-bar {
+    -fx-background-color: -border-color;
+}
+
+.scroll-bar .thumb {
+    -fx-background-color: #595959;
 }
